--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -11,7 +11,7 @@
             android:id="@+id/captureimage"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="使用其他服務幫忙拍照 "
+            android:text="拍照 "
             />
         <ImageView
             android:id="@+id/imagecaptured"
