--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -19,19 +19,19 @@
             android:id="@+id/camera"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="開啟相機"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            />
+            android:layout_weight="1"
+            android:onClick="clickCamera"
+            android:text="開啟相機" />
 
         <Button
             android:id="@+id/photo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="開啟相簿"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            />
+            android:layout_weight="1"
+            android:onClick="clickPhoto"
+            android:text="開啟相簿" />
 
     </LinearLayout>
 
